# tiago_social_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  tiago_experiments-melodic.rosinstall  tiago_navigation-melodic.rosinstall  tiago_perception-melodic.rosinstall
config/pal_navigation_cfg_tiago/config/base/hubero/: local_planner.yaml
launch/: bringup_gazebo.launch  gazebo_nav.launch  gazebo_sim.launch  gazebo_sim_and_nav.launch  gazebo_spawn.launch  navigation.launch  navigation_obstacles.launch  obstacle_detector.launch
rviz/: nav_merged_scans_obstacles.rviz
tiago_social_bringup/: CMakeLists.txt  README.md  package.xml
tiago_social_bringup/launch/: experiment_kkr.launch  gazebo_sim.launch  gazebo_spawn.launch  nav_perception_bringup.launch
tiago_social_experiments/: CMakeLists.txt  README.md  package.xml
tiago_social_experiments/config/: aws_hospital_goal.yaml  kkr_pose_init.yaml
tiago_social_experiments/launch/: 012.launch  aws_hospital.launch  kkr.launch  scenario_base.launch
tiago_social_navigation/: CMakeLists.txt  README.md  package.xml
tiago_social_navigation/config/: README.md
tiago_social_navigation/config/base/cadrl/: local_planner.yaml
tiago_social_navigation/config/base/cohan/: local_planner.yaml
tiago_social_navigation/config/base/common/: global_costmap_plugins_social_extended_public_sim.yaml  global_costmap_plugins_social_extended_wpassing_public_sim.yaml  global_costmap_plugins_social_public_sim.yaml  global_costmap_plugins_socially_normative_public_sim.yaml  global_costmap_public_real.yaml  global_costmap_public_sim.yaml  local_costmap_plugins_public_sim.yaml  local_costmap_plugins_social_extended_public_sim.yaml  local_costmap_plugins_social_extended_wpassing_public_sim.yaml  local_costmap_plugins_social_public_sim.yaml  local_costmap_plugins_socially_normative_public_sim.yaml  local_costmap_public_real.yaml  local_costmap_public_sim.yaml  recovery_behaviors.yaml
tiago_social_navigation/config/base/drl/: local_planner.yaml  rl_params_common.yaml  rl_params_exec.yaml
tiago_social_navigation/config/base/drl_vo/: local_planner.yaml  velocity_smoother.yaml
tiago_social_navigation/config/base/dwa/: local_planner.yaml
tiago_social_navigation/config/base/eband/: local_planner.yaml
tiago_social_navigation/config/base/global_planner/: global_planner_contexts.yaml
tiago_social_navigation/config/base/hateb/: local_planner.yaml
tiago_social_navigation/config/base/hubero/: README.md  local_planner.yaml
tiago_social_navigation/config/base/humap/: README.md  local_planner.yaml
tiago_social_navigation/config/base/robotino/: local_planner.yaml
tiago_social_navigation/config/base/sarl/: local_planner.yaml
tiago_social_navigation/config/base/sarl_star/: local_planner.yaml
tiago_social_navigation/config/base/srl_eband/: behaviour_parameters.yaml  local_planner.yaml
tiago_social_navigation/config/base/teb/: local_planner.yaml
tiago_social_navigation/config/base/trajectory/: local_planner.yaml
tiago_social_navigation/config/localization/: amcl_real.yaml
tiago_social_navigation/config/pal_navigation_cfg_tiago/config/base/hubero/: local_planner.yaml
tiago_social_navigation/launch/: 2dnav_localization.launch  2dnav_mapping.launch  2dnav_state_machine.launch  gazebo_localization.launch  gazebo_mapping.launch  gazebo_nav_base.launch  gazebo_nav_tiago.launch  localization.launch  localization_amcl.launch  mapping.launch  mapping_gmapping.launch  move_base.launch  navigation_base.launch  navigation_tiago.launch
tiago_social_navigation/launch/algorithms/: README.md  local_planner_cadrl.launch  local_planner_cohan.launch  local_planner_drl.launch  local_planner_drl_vo.launch  local_planner_hateb.launch  local_planner_sarl.launch  local_planner_sarl_star.launch  local_planner_srl_eband.launch  localization_amcl.launch  mapping_gmapping.launch
tiago_social_navigation/rviz/: tiago_navigation.rviz
tiago_social_navigation/scripts/: lidar_shrunker_node.py  navigation.sh
tiago_social_perception/: CMakeLists.txt  README.md  package.xml
tiago_social_perception/launch/: people_detection_spencer.launch  people_tracking_spencer.launch  perception_tiago.launch  perception_tiago_lite.launch  tiago_spencer_tracking.launch
tiago_social_perception/launch/detection/: spencer_laser_detectors.launch  spencer_rgbd_detectors.launch
tiago_social_perception/rviz/: spencer_tracking.rviz
tiago_social_scenarios/: CMakeLists.txt  README.md  package.xml
