<?xml version="1.0"?>
<package format="2">
  <name>tiago_social_experiments</name>
  <version>0.0.0</version>
  <description>The tiago_social_experiments package</description>
  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/tiago_social_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tiago_social_navigation</exec_depend>
  <exec_depend>tiago_social_perception</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
