<?xml version="1.0"?>
<package format="2">
  <name>tiago_social_navigation</name>
  <version>0.0.0</version>
  <description>The tiago_social_navigation package</description>
  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/tiago_social_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <!-- Launch files dependencies -->
  <exec_depend>pal_navigation_cfg_tiago</exec_depend>
  <exec_depend>robot_pose</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>social_navigation_layers</exec_depend>
  <exec_depend>tiago_laser_sensors</exec_depend>

  <!-- only for `advanced_navigation` -->
  <!--
  <exec_depend>pal_vo_server</exec_depend>
  <exec_depend>pal_head_manager</exec_depend>
  <exec_depend>tiago_2dnav</exec_depend>
  <exec_depend>pal_zoi_detector</exec_depend>
  <exec_depend>pal_waypoint</exec_depend>
  <exec_depend>pal_navigation_manager</exec_depend>
  <exec_depend>pal_map_utils</exec_depend>
  -->

  <!-- only for `base_type` == `omni_base` -->
  <!--
  <exec_depend>ira_laser_tools</exec_depend>
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
